2008-09-08  jannis

	* ChangeLog, dialogs/keyboard-settings/frap-shortcuts-dialog.c,
	  dialogs/keyboard-settings/frap-shortcuts.c, po/ChangeLog,
	  po/fi.po, po/nl.po, po/pt_BR.po, po/xfce4-settings.pot,
	  xfce4-settings-helper/frap-shortcuts.c:
	  * dialogs/keyboard-settings/frap-shortcuts.c,
	  dialogs/keyboard-settings/frap-shortcuts-dialog.c,
	  xfce4-settings-helper/frap-shortcuts.c: Sync with latest changes
	  made to libfrap (locally by now) and clean things up a little. *
	  *.po, xfce4-settings.pot: Merge strings.

2008-09-08  nick

	* configure.ac.in, dialogs/keyboard-settings/frap-shortcuts.c,
	  xfce4-settings-helper/frap-shortcuts.c,
	  xfce4-settings-helper/keyboard-shortcuts.c:
	  * Use DBG macro.
	* configure.ac.in, dialogs/keyboard-settings/frap-shortcuts.c,
	  dialogs/keyboard-settings/main.c, dialogs/mouse-settings/main.c,
	  xfce4-settings-helper/frap-shortcuts.c,
	  xfce4-settings-helper/pointers.c:
	  * Check for Xi 1.4 for the pointer code, make it compile on older
	  version. * Fix some compile warnings. * Check xi and libx11
	  versions to 1.0.0
	* dialogs/mouse-settings/main.c, xfce4-settings-helper/pointers.c:
	  * Disable pointer hotplugging on older Xi versions.
	* dialogs/keyboard-settings/frap-shortcuts.c,
	  xfce4-settings-helper/frap-shortcuts.c,
	  xfce4-settings-helper/keyboard-shortcuts.c,
	  xfce4-settings-helper/pointers.c:
	  * Disable the shortcuts debug output in release builds.

2008-09-08  jari

	* po/ChangeLog, po/fi.po:
	  Update Finnish translations

2008-09-07  jannis

	* po/ChangeLog, po/POTFILES.in, po/fi.po, po/nl.po, po/pt_BR.po,
	  po/xfce4-settings.pot:
	  * POTFILES.in: Add missing files. * *.po, xfce4-settings.pot:
	  Merge new strings.
	* ChangeLog, dialogs/keyboard-settings/frap-shortcuts-dialog.c:
	  * dialogs/keyboard-settings/frap-shortcuts-dialogs.c: Remove an
	  unused variable.
	* ChangeLog, dialogs/keyboard-settings/frap-shortcuts-dialog.c: